tests/cases/ok/from_imports_main.p4
from from_imports_helpers import twice
from math import abs

def main() -> None:
    print(twice(4))
    print(twice(1.5))
    print(abs(-5))
