tests/cases/fail/non_container_for_iterable.p4
def main() -> None:
    for key in 1:
        print(key)
